syntax = "proto3";

package greet;

service Greeter {
    rpc SayHello(HelloReq) returns (HelloResp);
}


message HelloReq {
    string content = 1;
}

message HelloResp { 
    string message = 1; 
}
