syntax = "proto3";

package voting;

service Voting {
  rpc Vote(VotingRequest) returns (VotingResponse);
  rpc Hello(HelloRequest) returns (HelloResponse);
}

message VotingRequest {
  string url = 1;
  enum Vote {
    UP = 0;
    DOWN = 1;
  }

  Vote vote = 2;
}

message VotingResponse { 
  string confirmation = 1; 
}

message HelloRequest {
  string name = 1; 
}

message HelloResponse {
  string message = 1; 
}